[package]
name = "diversity"
version = "0.1.0"
authors = ["Julio Ballista <julioballista@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.7.3"
rand = "0.7.3"
serde = "1.0.111"
serde_json = "1.0.53"

